<resources>
    <string name="app_name">Museum</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="expo1Name">История музея.</string>
    <string name="expo2Name">Ленинградское дело.</string>
    <string name="expo3Name">Зал временных выставок.</string>
    <string name="expo4Name">Победа.</string>
    <string name="expo5Name">Зал временных выставок.</string>
    <string name="expo6Name">Начало войны.</string>
    <string name="expo6.1Name">Начало войны. План «Барбаросса». Борьба на дальних и ближних подступах.</string>
    <string name="expo6.2Name">Перестройка всех сфер жизни Ленинграда на военный лад. Руководство города.</string>
    <string name="expo6.3Name">МПВО и противопожарная охрана.</string>
    <string name="expo6.4Name">Медицина.</string>
    <string name="expo6.5Name">Балтийский флот и Финляндия.</string>
    <string name="expo7Name">Ленинградский фронт.</string>
    <string name="expo7.1Name">Контрбатарейная борьба. Снайперское движение. Женщины в армии.</string>
    <string name="expo7.2Name">Попытки прорыва блокады Ленинграда.</string>
    <string name="expo7.3Name">Оккупационный режим на захваченных территориях. Партизаны и спортсмены Ленинграда.</string>
    <string name="expo7.4Name">Авиация в битве за Ленинград.</string>
    <string name="expo8Name">Жизнь города в блокаде.</string>
    <string name="expo8.1Name">Жизнь города в блокаде.</string>
    <string name="expo8.2Name">Продовольствие и голод зимы 1941-1942 гг.</string>
    <string name="expo8.3Name">Быт блокадного Ленинграда.</string>
    <string name="expo8.4Name">Борьба с преступностью.</string>
    <string name="expo8.5Name">Промышленность.</string>
    <string name="expo8.6Name">Культура. Театр, музыка, живопись. Радио. Наука.</string>
    <string name="expo8.7Name">Дети. Бомбоубежище.</string>
    <string name="expo8.8Name">Весна 1942 года. Очистка города, торфо-и лесозаготовки, огородничество, возобновление движения городского транспорта.</string>
    <string name="expo9Name">Дорога жизни.</string>
    <string name="expo9_1Name">Дорога жизни. Эвакуация.</string>
    <string name="expo9_2Name">Водный путь.</string>
    <string name="expo9_3Name">Ледовая трасса.</string>
    <string name="expo9_4Name">Трубопровод и электрокабель.</string>
    <string name="expo10Name">Прорыв блокады. Дорога победы.</string>
    <string name="expo10.1Name">Прорыв блокады. Дорога победы. Часть 1.</string>
    <string name="expo10.2Name">Прорыв блокады. Дорога победы. Часть 2.</string>
    <string name="expo11Name">Полное освобождение Ленинграда.</string>
    <string name="expo12Name">Медиатека.</string>
    <string name="expo1Text">При входе музей перед центральной лестницей слева на стене и справа в электронном киоске расположены краткие информационные справки об истории Соляного городка, музея обороны и блокады Ленинграда и блокадного архипелага.</string>
    <string name="expo2Text">Слева от центральной лестницы рядом со входом в зал временных выставок расположена экспозиция, посвященная краткой истории «Ленинградского дела» - серии судебных процессов в конце 1940-х – начале 1950-х годов против партийных и государственных руководителей РСФСР в СССР, в ходе которых им были предъявлены тяжкие обвинения. Событие стало отражением внутрипартийной борьбы и очередного витка усиления сталинских политических репрессий. Многие обвиняемые в рамках судебных процессов в годы войны занимали руководящие должности в системе управления Ленинградом.</string>
    <string name="expo3Text">В зале проходят временные выставки по отдельным сюжетам истории обороны и блокады Ленинграда, позволяющим раскрыть эту тему с разных сторон.</string>
    <string name="expo4Text">На стене вдоль центральной лестницы и при подъеме на второй этаж расположены портреты ключевых политических и военных деятелей, внесших свой вклад в победу над противником в ходе многолетней ленинградской блокады.</string>
    <string name="expo5Text">В зале проходят временные выставки по отдельным сюжетам истории обороны и блокады Ленинграда, позволяющим раскрыть эту тему с разных сторон.</string>
    <string name="expo6Text">Вдоль стены справа расположены важнейшие символы блокады Ленинграда: дневник Тани Савичевой, суточная норма продовольствия иждивенца в ноябре–декабре 1941 года в виде куска хлеба весом 125 граммов и многое другое. Данная часть зала является прологом к основной экспозиции.</string>
    <string name="expo6.1Text">Перед вами – начало раздела, посвященного первым дням Великой Отечественной войны. Вы находитесь между мотоциклом и началом экспозиции, где демонстрируется план нацистского наступления на СССР. Внимание привлекает схема плана «Барбаросса», разработанного немецким командованием.\n\nПлан «Барбаросса», названный в честь средневекового императора Фридриха I Барбароссы, предполагал молниеносное завоевание территории СССР, с использованием стратегии «блицкрига». Основные цели наступления – Ленинград, Москва, Центральный промышленный район и Донецкий бассейн.\nОбратите внимание на экспонаты:\nМотоцикл – немецкий мотоцикл «Цундапп» КС–750, захваченный в ходе боев по прорыву блокады Ленинграда. Этот мотоцикл является символом блицкрига и имеет уникальную историю, связанную с сержантом Николаем Исхомовым.\nМанекен в форме унтер–офицера германских танковых войск – демонстрирует экипировку и знаки отличия немецких танкистов, ключевой составляющей стратегии блицкрига.\nДалее, в разделе оборонительных сражений на дальних и ближних подступах к Ленинграду, вы увидите карту, показывающую ключевые моменты наступления немцев и сопротивления советских войск. Значительное внимание уделяется Лужскому рубежу обороны и роли ополчения в защите Ленинграда.\nВ витрине представлены немецкие пропагандистские листовки, а также личные вещи и документы ополченцев, оружие начального периода войны, включая противотанковые гранаты и «коктейли Молотова».\nЗавершается экспозиция обсуждением стабилизации фронта на южных подступах к Ленинграду к концу сентября 1941 года, что стало критическим моментом в обороне города.</string>
    <string name="expo6.2Text">Вы находитесь перед экспозицией, демонстрирующей перестройку Ленинграда в военное время. Основное внимание уделено мобилизации населения и реконструкции города для обороны. Выставлены материалы, свидетельствующие о введении военного положения, строительстве оборонительных сооружений, а также о роли местного руководства в управлении городом во время блокады.\n\nЛенинград быстро перешел на военный лад после начала Великой Отечественной войны. 22 июня 1941 года город был объявлен на военном положении, а с 23 июня началась мобилизация военнообязанных. Руководство города приняло меры для обеспечения общественного порядка и государственной безопасности, включая ограничения на перемещение и фотографирование.\nВ экспозиции представлены копии газеты «Ленинградская правда» от 22 июня 1941 года, демонстрирующие внезапность начала войны для города. Также выставлены фотографии оборонительных укреплений, включая Лужский рубеж и «Линию Сталина».\nВажной частью выставки являются материалы о мобилизации населения на строительство оборонительных сооружений и маскировку заметных зданий и памятников, в том числе шпиля Адмиралтейства.\nРассказывается о мерах по защите города от пожаров и авианалетов, включая установку зенитных орудий и аэростатов, а также о полной светомаскировке. Посетителям представлены экспонаты советских денег и ценностей, собранных в фонд обороны, и рассказывается об их важной роли в военное время.\nВыставка также освещает роль местного руководства в управлении городом. Особое внимание уделяется деятельности Андрея Александровича Жданова и других руководителей, а также упоминается о «Ленинградском деле». В экспозиции представлены часы расстрелянного Петра Тимофеевича Талюша, секретаря горкома партии.</string>
    <string name="expo6.3Text">Экспозиция посвящена Местной противовоздушной обороне (МПВО) и противопожарной охране Ленинграда во время блокады. Отображается важность защиты города от авиационных и артиллерийских атак, с использованием различных методов и средств. Выставлены предметы, такие как противогазы, шлемы, ручные сирены и зажигательные бомбы.\n\nМПВО Ленинграда играла критическую роль в защите города от вражеских бомбардировок и артиллерийского обстрела. На экспозиции представлены различные образцы противогазов, начиная от модели 1928 года и более совершенные последующие модели, включая противогаз БН–Т с маской МОД–О8. Особенностью шлема для бойцов МПВО, разработанного в Ленинграде перед войной, были широкие поля для защиты от обломков.\nБомбардировки начались 23 июня 1941 года с атаки на Кронштадт, вследствие чего в городе был объявлен первый сигнал воздушной тревоги. С 27 июня вводилось круглосуточное дежурство работников МПВО, устанавливались сигналы воздушной и химической тревоги. В витрине демонстрируется ручная сирена, использовавшаяся для оповещения о бомбардировках.\n11 июля 1941 года Ленгорсовет принял решение о всеобщей обязательной подготовке населения к противовоздушной обороне. Были организованы круглосуточные дежурства на крышах зданий для тушения зажигательных бомб.\nВыставлены экземпляры зажигательных бомб, использованных противником, и инструменты для их тушения, включая щипцы. Описывается создание аварийно-восстановительных полков и комсомольского полка противопожарной охраны.\nНа экспозиции также представлены снаряды и бомбы, сброшенные по Ленинграду, включая 250-килограммовую фугасную бомбу SC-250. Освещается вклад бойцов МПВО в уборку города и разминирование после снятия блокады.</string>
    <string name="appInfo1">Спроектировано и разработано командой университета ИТМО</string>
    <string name="appInfo2">Разработка:</string>
    <string name="appInfo3">Цатинян Артём\nСимонов Илья</string>
    <string name="appInfo4">Подготовка теоретических материалов:</string>
    <string name="appInfo5">Плотникова Вероника\nЛахтионов Константин</string>
    <string name="appInfo6">Руководители:</string>
    <string name="appInfo7">Пригодич Никита Дмитриевич\nЖиркова Галина Петровна</string>
    <string name="contactsInfo0">Контактная информация</string>
    <string name="contactsInfo1">Экскурсии, администратор:</string>
    <string name="contactsInfo2">Телефон: (812) 275-75-47</string>
    <string name="contactsInfo3">Электронная почта:</string>
    <string name="contactsInfo4">visit@gmmobl.ru</string>
    <string name="contactsInfo5">Канцелярия:</string>
    <string name="contactsInfo6">Телефон: (812) 275-84-82</string>
    <string name="contactsInfo7">Электронная почта:</string>
    <string name="contactsInfo8">gmmobl@mail.ru</string>
    <string name="contactsInfo9">gmmobl@cult.gugov.spb.ru (для официальных писем)</string>
    <string name="contactsInfo10">Адрес:</string>
    <string name="contactsInfo11">Санкт-Петербург, Соляной пер., 9</string>
    <string name="contactsInfo12">Время работы</string>
    <string name="contactsInfo13">Пн, ср, чт, пт, сб, вс : 10:00 — 18:00</string>
    <string name="contactsInfo14">Касса работает до 17:30, технологический перерыв кассы: 13.40 – 14.00\nВыходной день: вторник\nСанитарный день: последняя среда каждого месяца</string>
    <string name="contactsInfo15">Отправить письмо в адрес музея: gmmobl@mail.ru</string>
</resources>